# macro-gpo

./: .commit_msg.txt  .git_commit_msg.txt  .gitignore  LICENSE  README.md  build_exe.py  build_legacy_tkinter.py  capture_guide.py  commit_msg.txt  main.py  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
bridger_source/: README.md  requirements.txt  start_bridger.bat
bridger_source/src/: BridgerBackend.py  Cargo.toml  __init__.py  bridger.py  bridger.rs
docs/: ARCHITECTURE.md  PORTFOLIO_CASE_STUDY.md  YOLO_TRAINING.md
scripts/: audit_production_tree.ps1  build_all.ps1  build_backend.ps1  (+5 more)
src/ZedsuFrontend/: Cargo.toml  index.html  tauri.conf.json
src/ZedsuFrontend/capabilities/: default.json
src/ZedsuFrontend/icons/: generate_app_icon.py  generate_icons.py
src/ZedsuFrontend/permissions/: core-default.json  core-tray-default.json  global-shortcut-allow-is-registered.json  global-shortcut-allow-register.json  global-shortcut-allow-unregister.json
src/ZedsuFrontend/src/: app.js  lib.rs  main.rs
src/ZedsuFrontend/src/scripts/: confirm.js  hud.js  overview.js  shell.js  toast.js
src/ZedsuFrontend/src/scripts/pages/: combat-ai.js  detection.js  diagnostics.js  discord.js  logs.js  positions.js  settings.js  yolo.js
src/ZedsuFrontend/src/scripts/shared/: config-api.js
src/ZedsuFrontend/src/scripts/ui/: components.js  dom.js  normalizers.js  page-lifecycle.js
src/ZedsuFrontend/src/styles/: app.css  components.css  tokens.css
src/ZedsuFrontend/src/styles/pages/: detection.css  overview.css  positions.css  settings.css
(+181 files in other folders)
