[package]
name = "bridger"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sysinfo = "0.32"
open = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_HiDpi"] }

[build-dependencies]
tauri-build = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
